// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultWhisper should render correctly for four or more results 1`] = `
<oh-whisper
  label="RxNav Drug Lookup - 10 results for \\"foo\\""
  onClose={null}
>
  <oh-box
    direction="vertical"
    justifyContent="left"
  >
    <oh-message
      header="foo 1"
    />
    <oh-list-pair
      copyable={true}
      label="Synonym"
      style="none"
      value="Synonym"
    />
    <oh-list-pair
      copyable={true}
      label="RXCUI"
      style="none"
      value="RXCUI1"
    />
    <oh-list-pair
      copyable={true}
      label="TTY"
      style="none"
      value="TTY"
    />
    <oh-list-pair
      copyable={true}
      label="Language"
      style="none"
      value="Language"
    />
    <oh-list-pair
      copyable={true}
      label="Suppress"
      style="none"
      value="Suppress"
    />
  </oh-box>
  <oh-box
    direction="vertical"
    justifyContent="left"
  >
    <oh-divider
      layout={
        Object {
          "paddingBottom": "small",
        }
      }
    />
    <oh-message
      header="foo 2"
    />
    <oh-list-pair
      copyable={true}
      label="Synonym"
      style="none"
      value="Synonym"
    />
    <oh-list-pair
      copyable={true}
      label="RXCUI"
      style="none"
      value="RXCUI2"
    />
    <oh-list-pair
      copyable={true}
      label="TTY"
      style="none"
      value="TTY"
    />
    <oh-list-pair
      copyable={true}
      label="Language"
      style="none"
      value="Language"
    />
    <oh-list-pair
      copyable={true}
      label="Suppress"
      style="none"
      value="Suppress"
    />
  </oh-box>
  <oh-box
    direction="vertical"
    justifyContent="left"
  >
    <oh-divider
      layout={
        Object {
          "paddingBottom": "small",
        }
      }
    />
    <oh-message
      header="foo 3"
    />
    <oh-list-pair
      copyable={true}
      label="Synonym"
      style="none"
      value="Synonym"
    />
    <oh-list-pair
      copyable={true}
      label="RXCUI"
      style="none"
      value="RXCUI3"
    />
    <oh-list-pair
      copyable={true}
      label="TTY"
      style="none"
      value="TTY"
    />
    <oh-list-pair
      copyable={true}
      label="Language"
      style="none"
      value="Language"
    />
    <oh-list-pair
      copyable={true}
      label="Suppress"
      style="none"
      value="Suppress"
    />
  </oh-box>
  <oh-collapse-box
    open={false}
  >
    <oh-box
      direction="vertical"
      justifyContent="left"
    >
      <oh-divider
        layout={
          Object {
            "paddingBottom": "small",
          }
        }
      />
      <oh-message
        header="foo 4"
      />
      <oh-list-pair
        copyable={true}
        label="Synonym"
        style="none"
        value="Synonym"
      />
      <oh-list-pair
        copyable={true}
        label="RXCUI"
        style="none"
        value="RXCUI4"
      />
      <oh-list-pair
        copyable={true}
        label="TTY"
        style="none"
        value="TTY"
      />
      <oh-list-pair
        copyable={true}
        label="Language"
        style="none"
        value="Language"
      />
      <oh-list-pair
        copyable={true}
        label="Suppress"
        style="none"
        value="Suppress"
      />
    </oh-box>
    <oh-box
      direction="vertical"
      justifyContent="left"
    >
      <oh-divider
        layout={
          Object {
            "paddingBottom": "small",
          }
        }
      />
      <oh-message
        header="foo 5"
      />
      <oh-list-pair
        copyable={true}
        label="Synonym"
        style="none"
        value="Synonym"
      />
      <oh-list-pair
        copyable={true}
        label="RXCUI"
        style="none"
        value="RXCUI5"
      />
      <oh-list-pair
        copyable={true}
        label="TTY"
        style="none"
        value="TTY"
      />
      <oh-list-pair
        copyable={true}
        label="Language"
        style="none"
        value="Language"
      />
      <oh-list-pair
        copyable={true}
        label="Suppress"
        style="none"
        value="Suppress"
      />
    </oh-box>
    <oh-box
      direction="vertical"
      justifyContent="left"
    >
      <oh-divider
        layout={
          Object {
            "paddingBottom": "small",
          }
        }
      />
      <oh-message
        header="foo 6"
      />
      <oh-list-pair
        copyable={true}
        label="Synonym"
        style="none"
        value="Synonym"
      />
      <oh-list-pair
        copyable={true}
        label="RXCUI"
        style="none"
        value="RXCUI6"
      />
      <oh-list-pair
        copyable={true}
        label="TTY"
        style="none"
        value="TTY"
      />
      <oh-list-pair
        copyable={true}
        label="Language"
        style="none"
        value="Language"
      />
      <oh-list-pair
        copyable={true}
        label="Suppress"
        style="none"
        value="Suppress"
      />
    </oh-box>
    <oh-box
      direction="vertical"
      justifyContent="left"
    >
      <oh-divider
        layout={
          Object {
            "paddingBottom": "small",
          }
        }
      />
      <oh-message
        header="foo 7"
      />
      <oh-list-pair
        copyable={true}
        label="Synonym"
        style="none"
        value="Synonym"
      />
      <oh-list-pair
        copyable={true}
        label="RXCUI"
        style="none"
        value="RXCUI7"
      />
      <oh-list-pair
        copyable={true}
        label="TTY"
        style="none"
        value="TTY"
      />
      <oh-list-pair
        copyable={true}
        label="Language"
        style="none"
        value="Language"
      />
      <oh-list-pair
        copyable={true}
        label="Suppress"
        style="none"
        value="Suppress"
      />
    </oh-box>
    <oh-box
      direction="vertical"
      justifyContent="left"
    >
      <oh-divider
        layout={
          Object {
            "paddingBottom": "small",
          }
        }
      />
      <oh-message
        header="foo 8"
      />
      <oh-list-pair
        copyable={true}
        label="Synonym"
        style="none"
        value="Synonym"
      />
      <oh-list-pair
        copyable={true}
        label="RXCUI"
        style="none"
        value="RXCUI8"
      />
      <oh-list-pair
        copyable={true}
        label="TTY"
        style="none"
        value="TTY"
      />
      <oh-list-pair
        copyable={true}
        label="Language"
        style="none"
        value="Language"
      />
      <oh-list-pair
        copyable={true}
        label="Suppress"
        style="none"
        value="Suppress"
      />
    </oh-box>
    <oh-box
      direction="vertical"
      justifyContent="left"
    >
      <oh-divider
        layout={
          Object {
            "paddingBottom": "small",
          }
        }
      />
      <oh-message
        header="foo 9"
      />
      <oh-list-pair
        copyable={true}
        label="Synonym"
        style="none"
        value="Synonym"
      />
      <oh-list-pair
        copyable={true}
        label="RXCUI"
        style="none"
        value="RXCUI9"
      />
      <oh-list-pair
        copyable={true}
        label="TTY"
        style="none"
        value="TTY"
      />
      <oh-list-pair
        copyable={true}
        label="Language"
        style="none"
        value="Language"
      />
      <oh-list-pair
        copyable={true}
        label="Suppress"
        style="none"
        value="Suppress"
      />
    </oh-box>
    <oh-box
      direction="vertical"
      justifyContent="left"
    >
      <oh-divider
        layout={
          Object {
            "paddingBottom": "small",
          }
        }
      />
      <oh-message
        header="foo 10"
      />
      <oh-list-pair
        copyable={true}
        label="Synonym"
        style="none"
        value="Synonym"
      />
      <oh-list-pair
        copyable={true}
        label="RXCUI"
        style="none"
        value="RXCUI10"
      />
      <oh-list-pair
        copyable={true}
        label="TTY"
        style="none"
        value="TTY"
      />
      <oh-list-pair
        copyable={true}
        label="Language"
        style="none"
        value="Language"
      />
      <oh-list-pair
        copyable={true}
        label="Suppress"
        style="none"
        value="Suppress"
      />
    </oh-box>
  </oh-collapse-box>
</oh-whisper>
`;

exports[`SearchResultWhisper should render correctly for less than four results 1`] = `
<oh-whisper
  label="RxNav Drug Lookup - 3 results for \\"foo\\""
  onClose={null}
>
  <oh-box
    direction="vertical"
    justifyContent="left"
  >
    <oh-message
      header="foo 1"
    />
    <oh-list-pair
      copyable={true}
      label="Synonym"
      style="none"
      value="Synonym"
    />
    <oh-list-pair
      copyable={true}
      label="RXCUI"
      style="none"
      value="RXCUI1"
    />
    <oh-list-pair
      copyable={true}
      label="TTY"
      style="none"
      value="TTY"
    />
    <oh-list-pair
      copyable={true}
      label="Language"
      style="none"
      value="Language"
    />
    <oh-list-pair
      copyable={true}
      label="Suppress"
      style="none"
      value="Suppress"
    />
  </oh-box>
  <oh-box
    direction="vertical"
    justifyContent="left"
  >
    <oh-divider
      layout={
        Object {
          "paddingBottom": "small",
        }
      }
    />
    <oh-message
      header="foo 2"
    />
    <oh-list-pair
      copyable={true}
      label="Synonym"
      style="none"
      value="Synonym"
    />
    <oh-list-pair
      copyable={true}
      label="RXCUI"
      style="none"
      value="RXCUI2"
    />
    <oh-list-pair
      copyable={true}
      label="TTY"
      style="none"
      value="TTY"
    />
    <oh-list-pair
      copyable={true}
      label="Language"
      style="none"
      value="Language"
    />
    <oh-list-pair
      copyable={true}
      label="Suppress"
      style="none"
      value="Suppress"
    />
  </oh-box>
  <oh-box
    direction="vertical"
    justifyContent="left"
  >
    <oh-divider
      layout={
        Object {
          "paddingBottom": "small",
        }
      }
    />
    <oh-message
      header="foo 3"
    />
    <oh-list-pair
      copyable={true}
      label="Synonym"
      style="none"
      value="Synonym"
    />
    <oh-list-pair
      copyable={true}
      label="RXCUI"
      style="none"
      value="RXCUI3"
    />
    <oh-list-pair
      copyable={true}
      label="TTY"
      style="none"
      value="TTY"
    />
    <oh-list-pair
      copyable={true}
      label="Language"
      style="none"
      value="Language"
    />
    <oh-list-pair
      copyable={true}
      label="Suppress"
      style="none"
      value="Suppress"
    />
  </oh-box>
</oh-whisper>
`;
